# shou

./: Readme.md
shou/: Cargo.toml  sdkconfig.defaults  test.http
shou-detect/: main.py  requirements.txt
shou-web/: index.html  package.json  vite.config.ts
shou-web/src/: App.vue
shou/.cargo/: config.toml
shou/src/: main.rs  servo.rs  wifi.rs
shou/static/: index.html
